Added archiveCollaborationGroup service
